# task-rand

./: Cargo.toml
src/: app.rs  config.rs  main.rs  task.rs  taskwarrior.rs
