[package]
name = "task-rand"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive", "cargo"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
iso8601-duration = { version = "0.2.0", features = ["chrono"] }
itertools = "0.14.0"
open = "5.3.2"
rand = "0.9.0"
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = [
    "macros",
    "process",
    "rt-multi-thread",
    "time",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
